welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var T = new Array[Int]
	for (i <- T)
		{T(i)=0}}